--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ members = [
     "engine",
     "registry",
     "clients/rust",
-    "worker/rust"
+    "worker/rust",
+    "examples/functions/hello"
 ]
