--- a/examples/hello/Cargo.toml
+++ b/examples/hello/Cargo.toml
@@ -1,7 +1,7 @@
 [package] 
 name = "hello"
 description = "Replace this with your function description"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,3 +11,4 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 schemars = "0.8.11"
+axum = { version = "0.5.3", features= ["multipart"] }
